<resources>
    <string name="app_name">DragonTide Companion</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="app_email">Email address</string>
    <string name="app_password">Password</string>
    <string name="action_register">Register</string>
    <string name="app_password_verify">Verify password</string>
    <string name="app_username">Username</string>
    <string name="description">Description</string>
    <string name="campaign_name">Campaign name</string>
    <string name="action_invite_sms">Invite friend through SMS</string>
    <string name="qrcode_invite_help">Or let your friend scan this QR code to join this campaign:</string>
    <string name="body_invite_sms">Hello! I want to invite you to join my Dungeons and Dragons campaign, "%2$s", on DragonTide. The ID for this campaign is %1$s.</string>
</resources>
