<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" >
    <data>
        <variable
            name="campaign"
            type="com.example.tyil.dtc.Data.CampaignCreateData" />
        <variable
            name="activity"
            type="com.example.tyil.dtc.Activities.CampaignCreateActivity" />
    </data>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/campaign_name"
            android:inputType="text"
            android:text="@={campaign.name}" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="text"
            android:text="@={campaign.description}" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/app_password"
            android:inputType="textPassword"
            android:text="@={campaign.password}" />

        <LinearLayout
            style="?attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom">

            <Button
                android:id="@+id/button"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{() -> activity.handleCreate(campaign)}"
                android:text="@string/action_sign_in_short" />
        </LinearLayout>

    </LinearLayout>
</layout>
